# edge-vector-store

./: .gitignore  .npmignore  CMakeLists.txt  README.md  edge-vector-store.podspec  package-lock.json  package.json  plan-edgeVectorStore.prompt.md  tsconfig.json
android/: build.gradle
android/cpp/: jni.cpp
android/src/main/java/com/sukshm/edgevectorstore/: EdgeVectorStoreModule.java  EdgeVectorStorePackage.java
bench/: FlatSearch.h  benchmark.cpp
cpp/ann/: ANNEngine.cpp  ANNEngine.h  HotCache.cpp  HotCache.h  SIMDKernels.cpp  SIMDKernels.h  TieredSearch.cpp  TieredSearch.h
cpp/bench/: BenchmarkEngine.cpp  BenchmarkEngine.h
cpp/bridge/: EdgeStoreModule.cpp  EdgeStoreModule.h  StoreRegistry.h
cpp/core/: Config.h  EdgeStore.cpp  EdgeStore.h  Journal.cpp  Journal.h  Types.h
cpp/pack/: PackFormat.cpp  PackFormat.h  PackIO.cpp  PackIO.h
cpp/storage/: IDMapper.h  MetadataStore.cpp  MetadataStore.h  MmapFile.cpp  MmapFile.h  VectorStore.cpp  VectorStore.h
cpp/util/: JsonParser.h
example/: App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/evsexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/EVSExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/EVSExample.xcodeproj/: project.pbxproj
example/ios/EVSExample.xcodeproj/xcshareddata/xcschemes/: EVSExample.xcscheme
example/ios/EVSExample.xcworkspace/: contents.xcworkspacedata
example/src/: AppNavigator.tsx
example/src/screens/: BenchmarkScreen.tsx  ChatScreen.tsx  HomeScreen.tsx  ResultsScreen.tsx
example/src/services/: BenchmarkRunner.ts  ChatService.ts  PromptTemplates.ts  QueryEmbedder.ts  VectorSearchService.ts
ios/: EdgeVectorStoreInstaller.mm
scripts/: build_wasm.sh
src/: EdgeVectorStore.ts  NativeEdgeVectorStore.ts  index.ts  types.ts
test/: smoke_test.cpp
tools/: bench_lancedb.py  bench_objectbox.java  compare_results.py  convert_vectors.py  export_evs_pack.py  generate_dataset.py
